Plaintext archives, fix for blurred fonts

--- a/kOS.csproj
+++ b/kOS.csproj
@@ -66,6 +66,7 @@
     <Compile Include="InterpreterEdit.cs" />
     <Compile Include="InterpreterImmediate.cs" />
     <Compile Include="kOSException.cs" />
+    <Compile Include="kOSIDModule.cs" />
     <Compile Include="kOSProcessor.cs" />
     <Compile Include="BindingsFlightControl.cs" />
     <Compile Include="File.cs" />
