Fixes from 0.41 and 0.42

--- a/kOS.csproj
+++ b/kOS.csproj
@@ -72,6 +72,8 @@
     <Compile Include="File.cs" />
     <Compile Include="Resource.cs" />
     <Compile Include="SpecialValue.cs" />
+    <Compile Include="SpecialValueTester.cs" />
+    <Compile Include="StageValues.cs" />
     <Compile Include="SteeringHelper.cs" />
     <Compile Include="VesselTarget.cs" />
     <Compile Include="TermWindow.cs" />
