--- a/kOS.csproj
+++ b/kOS.csproj
@@ -87,6 +87,7 @@
     <Compile Include="SteeringHelper.cs" />
     <Compile Include="Timespan.cs" />
     <Compile Include="Vector.cs" />
+    <Compile Include="VersionInfo.cs" />
     <Compile Include="VesselTarget.cs" />
     <Compile Include="TermWindow.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
