--- a/kOS.csproj
+++ b/kOS.csproj
@@ -78,6 +78,7 @@
     <Compile Include="kOSProcessor.cs" />
     <Compile Include="BindingsFlightControl.cs" />
     <Compile Include="File.cs" />
+    <Compile Include="ListValue.cs" />
     <Compile Include="Node.cs" />
     <Compile Include="Orbit.cs" />
     <Compile Include="Resource.cs" />
