--- a/kOS.csproj
+++ b/kOS.csproj
@@ -56,13 +56,13 @@
     <Compile Include="BindingsUniverse.cs" />
     <Compile Include="BodyAtmosphere.cs" />
     <Compile Include="BodyTarget.cs" />
-    <Compile Include="Command.cs" />
-    <Compile Include="CommandBasicIO.cs" />
-    <Compile Include="CommandFileIO.cs" />
-    <Compile Include="CommandFlowControl.cs" />
-    <Compile Include="CommandCallExternal.cs" />
-    <Compile Include="CommandTemporal.cs" />
-    <Compile Include="CommandVessel.cs" />
+    <Compile Include="Command\Command.cs" />
+    <Compile Include="Command\CommandBasicIO.cs" />
+    <Compile Include="Command\CommandFileIO.cs" />
+    <Compile Include="Command\CommandFlowControl.cs" />
+    <Compile Include="Command\CommandCallExternal.cs" />
+    <Compile Include="Command\CommandTemporal.cs" />
+    <Compile Include="Command\CommandVessel.cs" />
     <Compile Include="ContextRunProgram.cs" />
     <Compile Include="DebugTools.cs" />
     <Compile Include="Direction.cs" />
