each file command has their own file

--- a/kOS.csproj
+++ b/kOS.csproj
@@ -58,11 +58,18 @@
     <Compile Include="BodyTarget.cs" />
     <Compile Include="Command\Command.cs" />
     <Compile Include="Command\CommandBasicIO.cs" />
-    <Compile Include="Command\CommandFileIO.cs" />
+    <Compile Include="Command\File\CommandCopy.cs" />
+    <Compile Include="Command\File\CommandDelete.cs" />
+    <Compile Include="Command\File\CommandEditFile.cs" />
+    <Compile Include="Command\File\CommandList.cs" />
     <Compile Include="Command\CommandFlowControl.cs" />
     <Compile Include="Command\CommandCallExternal.cs" />
     <Compile Include="Command\CommandTemporal.cs" />
     <Compile Include="Command\CommandVessel.cs" />
+    <Compile Include="Command\File\CommandLog.cs" />
+    <Compile Include="Command\File\CommandRename.cs" />
+    <Compile Include="Command\File\CommandRunFile.cs" />
+    <Compile Include="Command\File\CommandSwitch.cs" />
     <Compile Include="ContextRunProgram.cs" />
     <Compile Include="DebugTools.cs" />
     <Compile Include="Direction.cs" />
