BasicIO commands all have their own file

--- a/kOS.csproj
+++ b/kOS.csproj
@@ -56,8 +56,20 @@
     <Compile Include="BindingsUniverse.cs" />
     <Compile Include="BodyAtmosphere.cs" />
     <Compile Include="BodyTarget.cs" />
+    <Compile Include="Command\BasicIO\CommandClearScreen.cs" />
+    <Compile Include="Command\BasicIO\CommandDeclareParameter.cs" />
+    <Compile Include="Command\BasicIO\CommandDeclareVar.cs" />
+    <Compile Include="Command\BasicIO\CommandPrint.cs" />
+    <Compile Include="Command\BasicIO\CommandPrintAt.cs" />
+    <Compile Include="Command\BasicIO\CommandReboot.cs" />
+    <Compile Include="Command\BasicIO\CommandSet.cs" />
+    <Compile Include="Command\BasicIO\CommandSetOn.cs" />
+    <Compile Include="Command\BasicIO\CommandShutdown.cs" />
+    <Compile Include="Command\BasicIO\CommandTestKegex.cs" />
+    <Compile Include="Command\BasicIO\CommandToggle.cs" />
+    <Compile Include="Command\BasicIO\CommandUnset.cs" />
     <Compile Include="Command\Command.cs" />
-    <Compile Include="Command\CommandBasicIO.cs" />
+    <Compile Include="Command\BasicIO\CommandSetOff.cs" />
     <Compile Include="Command\File\CommandCopy.cs" />
     <Compile Include="Command\File\CommandDelete.cs" />
     <Compile Include="Command\File\CommandEditFile.cs" />
