--- a/kOS.csproj
+++ b/kOS.csproj
@@ -54,8 +54,8 @@
     <Compile Include="BindingsTerminalSettings.cs" />
     <Compile Include="BindingsTest.cs" />
     <Compile Include="BindingsUniverse.cs" />
-    <Compile Include="BodyAtmosphere.cs" />
-    <Compile Include="BodyTarget.cs" />
+    <Compile Include="Value\BodyAtmosphere.cs" />
+    <Compile Include="Value\BodyTarget.cs" />
     <Compile Include="Command\BasicIO\CommandClearScreen.cs" />
     <Compile Include="Command\BasicIO\CommandDeclareParameter.cs" />
     <Compile Include="Command\BasicIO\CommandDeclareVar.cs" />
@@ -96,13 +96,13 @@
     <Compile Include="Command\FlowControl\CommandUntilLoop.cs" />
     <Compile Include="Command\Vessel\CommandVesselStage.cs" />
     <Compile Include="ContextRunProgram.cs" />
-    <Compile Include="DebugTools.cs" />
+    <Compile Include="Debug\DebugTools.cs" />
     <Compile Include="Debug\KOSReadOnlyException.cs" />
-    <Compile Include="Direction.cs" />
+    <Compile Include="Value\Direction.cs" />
     <Compile Include="ExecutionContext.cs" />
     <Compile Include="Expression.cs" />
     <Compile Include="ExpressionTerm.cs" />
-    <Compile Include="GeoCoordinates.cs" />
+    <Compile Include="Value\GeoCoordinates.cs" />
     <Compile Include="Harddisk.cs" />
     <Compile Include="InterpreterBootup.cs" />
     <Compile Include="InterpreterEdit.cs" />
@@ -113,19 +113,19 @@
     <Compile Include="kOSProcessor.cs" />
     <Compile Include="BindingsFlightControl.cs" />
     <Compile Include="File.cs" />
-    <Compile Include="ListValue.cs" />
-    <Compile Include="Node.cs" />
-    <Compile Include="Orbit.cs" />
+    <Compile Include="Value\ListValue.cs" />
+    <Compile Include="Value\Node.cs" />
+    <Compile Include="Value\Orbit.cs" />
     <Compile Include="Resource.cs" />
-    <Compile Include="SpecialValue.cs" />
-    <Compile Include="SpecialValueTester.cs" />
-    <Compile Include="StageValues.cs" />
+    <Compile Include="Value\SpecialValue.cs" />
+    <Compile Include="Value\SpecialValueTester.cs" />
+    <Compile Include="Value\StageValues.cs" />
     <Compile Include="SteeringHelper.cs" />
-    <Compile Include="Timespan.cs" />
-    <Compile Include="Vector.cs" />
-    <Compile Include="VersionInfo.cs" />
-    <Compile Include="VesselSensors.cs" />
-    <Compile Include="VesselTarget.cs" />
+    <Compile Include="Value\Timespan.cs" />
+    <Compile Include="Value\Vector.cs" />
+    <Compile Include="Value\VersionInfo.cs" />
+    <Compile Include="Value\VesselSensors.cs" />
+    <Compile Include="Value\VesselTarget.cs" />
     <Compile Include="TermWindow.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="CPU.cs" />
