--- a/kOS.csproj
+++ b/kOS.csproj
@@ -55,6 +55,7 @@
     <Compile Include="Binding\BindingsTest.cs" />
     <Compile Include="Binding\BindingsUniverse.cs" />
     <Compile Include="Binding\KOSBinding.cs" />
+    <Compile Include="Persistance\Archive.cs" />
     <Compile Include="Value\BodyAtmosphere.cs" />
     <Compile Include="Value\BodyTarget.cs" />
     <Compile Include="Command\BasicIO\CommandClearScreen.cs" />
@@ -96,31 +97,31 @@
     <Compile Include="Command\FlowControl\CommandIf.cs" />
     <Compile Include="Command\FlowControl\CommandUntilLoop.cs" />
     <Compile Include="Command\Vessel\CommandVesselStage.cs" />
-    <Compile Include="ContextRunProgram.cs" />
+    <Compile Include="Context\ContextRunProgram.cs" />
     <Compile Include="Debug\DebugTools.cs" />
     <Compile Include="Debug\KOSReadOnlyException.cs" />
     <Compile Include="Value\Direction.cs" />
-    <Compile Include="ExecutionContext.cs" />
-    <Compile Include="Expression.cs" />
-    <Compile Include="ExpressionTerm.cs" />
+    <Compile Include="Context\ExecutionContext.cs" />
+    <Compile Include="Expression\Expression.cs" />
+    <Compile Include="Expression\Term.cs" />
     <Compile Include="Value\GeoCoordinates.cs" />
-    <Compile Include="Harddisk.cs" />
-    <Compile Include="InterpreterBootup.cs" />
-    <Compile Include="InterpreterEdit.cs" />
-    <Compile Include="InterpreterImmediate.cs" />
+    <Compile Include="Persistance\Harddisk.cs" />
+    <Compile Include="Interpreter\InterpreterBootup.cs" />
+    <Compile Include="Interpreter\InterpreterEdit.cs" />
+    <Compile Include="Interpreter\InterpreterImmediate.cs" />
     <Compile Include="Debug\KOSException.cs" />
-    <Compile Include="kOSExternalCommand.cs" />
+    <Compile Include="Expression\kOSExternalCommand.cs" />
     <Compile Include="kOSIDModule.cs" />
     <Compile Include="kOSProcessor.cs" />
     <Compile Include="Binding\BindingsFlightControl.cs" />
-    <Compile Include="File.cs" />
+    <Compile Include="Persistance\File.cs" />
     <Compile Include="Value\ListValue.cs" />
     <Compile Include="Value\Node.cs" />
     <Compile Include="Value\Orbit.cs" />
     <Compile Include="Value\SpecialValue.cs" />
     <Compile Include="Value\SpecialValueTester.cs" />
     <Compile Include="Value\StageValues.cs" />
-    <Compile Include="SteeringHelper.cs" />
+    <Compile Include="Utilities\SteeringHelper.cs" />
     <Compile Include="Value\Timespan.cs" />
     <Compile Include="Value\Vector.cs" />
     <Compile Include="Value\VersionInfo.cs" />
@@ -128,15 +129,15 @@
     <Compile Include="Value\VesselTarget.cs" />
     <Compile Include="TermWindow.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="CPU.cs" />
+    <Compile Include="Context\CPU.cs" />
     <Compile Include="Core.cs" />
-    <Compile Include="Utils.cs" />
-    <Compile Include="Variable.cs" />
-    <Compile Include="VesselVelocity.cs" />
-    <Compile Include="Volume.cs" />
+    <Compile Include="Utilities\Utils.cs" />
+    <Compile Include="Binding\Variable.cs" />
+    <Compile Include="Value\VesselVelocity.cs" />
+    <Compile Include="Persistance\Volume.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="VesselUtils.cs" />
+    <Compile Include="Utilities\VesselUtils.cs" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
