add Volume Interface

--- a/kOS.csproj
+++ b/kOS.csproj
@@ -62,6 +62,7 @@
     <Compile Include="Context\ICPU.cs" />
     <Compile Include="Context\IExecutionContext.cs" />
     <Compile Include="Module\IProcessorModule.cs" />
+    <Compile Include="Persistance\IVolume.cs" />
     <Compile Include="Value\ConstantValue.cs" />
     <Compile Include="Persistance\Archive.cs" />
     <Compile Include="Value\BodyAtmosphere.cs" />
