renamed Value to Suffixed

--- a/kOS.csproj
+++ b/kOS.csproj
@@ -65,10 +65,10 @@
     <Compile Include="Context\IExecutionContext.cs" />
     <Compile Include="Module\IProcessorModule.cs" />
     <Compile Include="Persistance\IVolume.cs" />
-    <Compile Include="Value\ConstantValue.cs" />
+    <Compile Include="Suffixed\ConstantValue.cs" />
     <Compile Include="Persistance\Archive.cs" />
-    <Compile Include="Value\BodyAtmosphere.cs" />
-    <Compile Include="Value\BodyTarget.cs" />
+    <Compile Include="Suffixed\BodyAtmosphere.cs" />
+    <Compile Include="Suffixed\BodyTarget.cs" />
     <Compile Include="Command\BasicIO\CommandClearScreen.cs" />
     <Compile Include="Command\BasicIO\CommandDeclareParameter.cs" />
     <Compile Include="Command\BasicIO\CommandDeclareVar.cs" />
@@ -111,11 +111,11 @@
     <Compile Include="Context\ContextRunProgram.cs" />
     <Compile Include="Debug\DebugTools.cs" />
     <Compile Include="Debug\KOSReadOnlyException.cs" />
-    <Compile Include="Value\Direction.cs" />
+    <Compile Include="Suffixed\Direction.cs" />
     <Compile Include="Context\ExecutionContext.cs" />
     <Compile Include="Expression\Expression.cs" />
     <Compile Include="Expression\Term.cs" />
-    <Compile Include="Value\GeoCoordinates.cs" />
+    <Compile Include="Suffixed\GeoCoordinates.cs" />
     <Compile Include="Persistance\Harddisk.cs" />
     <Compile Include="Interpreter\InterpreterBootup.cs" />
     <Compile Include="Interpreter\InterpreterEdit.cs" />
@@ -126,27 +126,27 @@
     <Compile Include="Module\kOSProcessor.cs" />
     <Compile Include="Binding\FlightControl.cs" />
     <Compile Include="Persistance\File.cs" />
-    <Compile Include="Value\IOperatable.cs" />
-    <Compile Include="Value\ISuffixed.cs" />
-    <Compile Include="Value\ListValue.cs" />
-    <Compile Include="Value\Node.cs" />
-    <Compile Include="Value\Orbit.cs" />
-    <Compile Include="Value\SpecialValue.cs" />
-    <Compile Include="Value\SpecialValueTester.cs" />
-    <Compile Include="Value\StageValues.cs" />
+    <Compile Include="Suffixed\IOperatable.cs" />
+    <Compile Include="Suffixed\ISuffixed.cs" />
+    <Compile Include="Suffixed\ListValue.cs" />
+    <Compile Include="Suffixed\Node.cs" />
+    <Compile Include="Suffixed\Orbit.cs" />
+    <Compile Include="Suffixed\SpecialValue.cs" />
+    <Compile Include="Suffixed\SpecialValueTester.cs" />
+    <Compile Include="Suffixed\StageValues.cs" />
     <Compile Include="Utilities\SteeringHelper.cs" />
-    <Compile Include="Value\Timespan.cs" />
-    <Compile Include="Value\Vector.cs" />
-    <Compile Include="Value\VersionInfo.cs" />
-    <Compile Include="Value\VesselSensors.cs" />
-    <Compile Include="Value\VesselTarget.cs" />
+    <Compile Include="Suffixed\Timespan.cs" />
+    <Compile Include="Suffixed\Vector.cs" />
+    <Compile Include="Suffixed\VersionInfo.cs" />
+    <Compile Include="Suffixed\VesselSensors.cs" />
+    <Compile Include="Suffixed\VesselTarget.cs" />
     <Compile Include="TerminalWindow.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Context\CPU.cs" />
     <Compile Include="Core.cs" />
     <Compile Include="Utilities\Utils.cs" />
     <Compile Include="Binding\Variable.cs" />
-    <Compile Include="Value\VesselVelocity.cs" />
+    <Compile Include="Suffixed\VesselVelocity.cs" />
     <Compile Include="Persistance\Volume.cs" />
   </ItemGroup>
   <ItemGroup>
