added List In command

--- a/kOS.csproj
+++ b/kOS.csproj
@@ -115,6 +115,8 @@
     <Compile Include="Context\ExecutionContext.cs" />
     <Compile Include="Expression\Expression.cs" />
     <Compile Include="Expression\Term.cs" />
+    <Compile Include="Suffixed\ElementValue.cs" />
+    <Compile Include="Suffixed\EngineValue.cs" />
     <Compile Include="Suffixed\GeoCoordinates.cs" />
     <Compile Include="Persistance\Harddisk.cs" />
     <Compile Include="Interpreter\InterpreterBootup.cs" />
@@ -131,6 +133,8 @@
     <Compile Include="Suffixed\ListValue.cs" />
     <Compile Include="Suffixed\Node.cs" />
     <Compile Include="Suffixed\Orbit.cs" />
+    <Compile Include="Suffixed\PartValue.cs" />
+    <Compile Include="Suffixed\ResourceValue.cs" />
     <Compile Include="Suffixed\SpecialValue.cs" />
     <Compile Include="Suffixed\SpecialValueTester.cs" />
     <Compile Include="Suffixed\StageValues.cs" />
