--- a/kOS.csproj
+++ b/kOS.csproj
@@ -141,6 +141,7 @@
     <Compile Include="Suffixed\Orbit.cs" />
     <Compile Include="Suffixed\PartValue.cs" />
     <Compile Include="Suffixed\ResourceValue.cs" />
+    <Compile Include="Suffixed\SensorValue.cs" />
     <Compile Include="Suffixed\SpecialValue.cs" />
     <Compile Include="Suffixed\SpecialValueTester.cs" />
     <Compile Include="Suffixed\StageValues.cs" />
