made flight control behave more like a SET than LOCK Resolves #29

--- a/kOS.csproj
+++ b/kOS.csproj
@@ -149,6 +149,7 @@
     <Compile Include="Suffixed\SpecialValue.cs" />
     <Compile Include="Suffixed\SpecialValueTester.cs" />
     <Compile Include="Suffixed\StageValues.cs" />
+    <Compile Include="Utilities\Flushable.cs" />
     <Compile Include="Utilities\SteeringHelper.cs" />
     <Compile Include="Suffixed\Timespan.cs" />
     <Compile Include="Suffixed\Vector.cs" />
