--- a/kOS.csproj
+++ b/kOS.csproj
@@ -31,9 +31,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Assembly-CSharp, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\KSP_LIB\Assembly-CSharp.dll</HintPath>
+    <Reference Include="Assembly-CSharp">
+      <HintPath>F:\Games\Steam\SteamApps\common\Kerbal Space Program\KSP_Data\Managed\Assembly-CSharp.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -42,19 +41,18 @@
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
-    <Reference Include="UnityEngine, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\KSP_LIB\UnityEngine.dll</HintPath>
+    <Reference Include="UnityEngine">
+      <HintPath>F:\Games\Steam\SteamApps\common\Kerbal Space Program\KSP_Data\Managed\UnityEngine.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="RemoteTech2\CommandBatch.cs" />
-    <Compile Include="RemoteTech2\RemoteTechAPI.cs" />
+    <Compile Include="AddOns\RemoteTech2\CommandBatch.cs" />
+    <Compile Include="AddOns\RemoteTech2\RemoteTechAPI.cs" />
     <Compile Include="Suffixed\FlightControl.cs" />
-    <Compile Include="RemoteTech2\IRemoteTechAPIv1.cs" />
-    <Compile Include="RemoteTech2\CommandDeploy.cs" />
-    <Compile Include="RemoteTech2\RemoteTechHook.cs" />
-    <Compile Include="RemoteTech2\RemoteTechUtility.cs" />
+    <Compile Include="AddOns\RemoteTech2\IRemoteTechAPIv1.cs" />
+    <Compile Include="AddOns\RemoteTech2\CommandDeploy.cs" />
+    <Compile Include="AddOns\RemoteTech2\RemoteTechHook.cs" />
+    <Compile Include="AddOns\RemoteTech2\RemoteTechUtility.cs" />
     <Compile Include="Binding\ActionGroups.cs" />
     <Compile Include="Binding\BindingManager.cs" />
     <Compile Include="Binding\BoundVariable.cs" />
