--- a/kRISC.csproj
+++ b/kRISC.csproj
@@ -8,7 +8,7 @@
     <ProjectGuid>{465EC87D-723D-4A6C-B116-9777AC641DE3}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>kRISC</RootNamespace>
+    <RootNamespace>kOS</RootNamespace>
     <AssemblyName>kRISC</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
@@ -48,65 +48,72 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Binding.cs" />
-    <Compile Include="BindingsFlightControl.cs" />
-    <Compile Include="BindingsFlightStats.cs" />
-    <Compile Include="BindingsRoverStats.cs" />
-    <Compile Include="BindingsTerminalSettings.cs" />
-    <Compile Include="BindingsUniverse.cs" />
-    <Compile Include="BodyTarget.cs" />
+    <Compile Include="Bindings\ActionGroups.cs" />
+    <Compile Include="Bindings\Binding.cs" />
+    <Compile Include="Bindings\BindingConfig.cs" />
+    <Compile Include="Bindings\BindingManager.cs" />
+    <Compile Include="Bindings\FlightControl.cs" />
+    <Compile Include="Bindings\FlightStats.cs" />
+    <Compile Include="Bindings\MissionSettings.cs" />
+    <Compile Include="Bindings\RoverStats.cs" />
+    <Compile Include="Bindings\TerminalSettings.cs" />
+    <Compile Include="Bindings\BindingsUniverse.cs" />
+    <Compile Include="Bindings\BoundVariable.cs" />
+    <Compile Include="Bindings\KOSBinding.cs" />
+    <Compile Include="Suffixed\BodyTarget.cs" />
     <Compile Include="CompileCache.cs" />
-    <Compile Include="Config.cs" />
+    <Compile Include="Suffixed\Config.cs" />
     <Compile Include="FunctionList.cs" />
-    <Compile Include="Harddisk.cs" />
+    <Compile Include="Persistence\Harddisk.cs" />
     <Compile Include="InterProcessor\InterProcCommand.cs" />
     <Compile Include="InterProcessor\ProcessorManager.cs" />
     <Compile Include="InterProcessor\RunCommand.cs" />
-    <Compile Include="kOSIDModule.cs" />
+    <Compile Include="Module\kOSIDModule.cs" />
     <Compile Include="KS\Helpers.cs" />
     <Compile Include="Core.cs" />
-    <Compile Include="GeoCoordinates.cs" />
+    <Compile Include="Suffixed\GeoCoordinates.cs" />
     <Compile Include="Interpreter.cs" />
-    <Compile Include="kOSProcessor.cs" />
+    <Compile Include="Module\kOSProcessor.cs" />
     <Compile Include="KS\Context.cs" />
     <Compile Include="KS\KSScript.cs" />
     <Compile Include="Logger.cs" />
-    <Compile Include="Node.cs" />
-    <Compile Include="Orbit.cs" />
+    <Compile Include="Suffixed\Node.cs" />
+    <Compile Include="Suffixed\Orbit.cs" />
     <Compile Include="CodePart.cs" />
+    <Compile Include="Persistence\Archive.cs" />
     <Compile Include="ProgramBuilder.cs" />
     <Compile Include="ProgramContext.cs" />
     <Compile Include="ProgramFile.cs" />
     <Compile Include="ScreenBuffer.cs" />
     <Compile Include="Script.cs" />
     <Compile Include="SharedObjects.cs" />
-    <Compile Include="StageValues.cs" />
-    <Compile Include="SteeringHelper.cs" />
+    <Compile Include="Suffixed\StageValues.cs" />
+    <Compile Include="Utilities\SteeringHelper.cs" />
     <Compile Include="TermWindow.cs" />
     <Compile Include="TextEditor.cs" />
-    <Compile Include="Timespan.cs" />
-    <Compile Include="Utils.cs" />
-    <Compile Include="Vector.cs" />
+    <Compile Include="Suffixed\Timespan.cs" />
+    <Compile Include="Utilities\Utils.cs" />
+    <Compile Include="Suffixed\Vector.cs" />
     <Compile Include="Calculator.cs" />
     <Compile Include="KS\Compiler.cs" />
     <Compile Include="CPU.cs" />
-    <Compile Include="Direction.cs" />
+    <Compile Include="Suffixed\Direction.cs" />
     <Compile Include="Function.cs" />
     <Compile Include="Opcode.cs" />
     <Compile Include="KS\Parser.cs" />
     <Compile Include="KS\ParseTree.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="KS\Scanner.cs" />
-    <Compile Include="SpecialValue.cs" />
+    <Compile Include="Suffixed\SpecialValue.cs" />
     <Compile Include="Stack.cs" />
     <Compile Include="Variable.cs" />
-    <Compile Include="VersionInfo.cs" />
-    <Compile Include="VesselSensors.cs" />
-    <Compile Include="VesselTarget.cs" />
-    <Compile Include="VesselUtils.cs" />
-    <Compile Include="VesselVelocity.cs" />
-    <Compile Include="Volume.cs" />
-    <Compile Include="VolumeManager.cs" />
+    <Compile Include="Suffixed\VersionInfo.cs" />
+    <Compile Include="Suffixed\VesselSensors.cs" />
+    <Compile Include="Suffixed\VesselTarget.cs" />
+    <Compile Include="Utilities\VesselUtils.cs" />
+    <Compile Include="Suffixed\VesselVelocity.cs" />
+    <Compile Include="Persistence\Volume.cs" />
+    <Compile Include="Persistence\VolumeManager.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
