More refactoring and cleanup

--- a/kRISC.csproj
+++ b/kRISC.csproj
@@ -60,53 +60,59 @@
     <Compile Include="Bindings\BindingsUniverse.cs" />
     <Compile Include="Bindings\BoundVariable.cs" />
     <Compile Include="Bindings\KOSBinding.cs" />
+    <Compile Include="Function\FunctionAttribute.cs" />
+    <Compile Include="Function\Math.cs" />
+    <Compile Include="Function\Misc.cs" />
+    <Compile Include="Function\Persistence.cs" />
+    <Compile Include="Function\Suffixed.cs" />
+    <Compile Include="Function\Trigonometry.cs" />
     <Compile Include="Suffixed\BodyTarget.cs" />
-    <Compile Include="CompileCache.cs" />
+    <Compile Include="Compilation\CompileCache.cs" />
     <Compile Include="Suffixed\Config.cs" />
-    <Compile Include="FunctionList.cs" />
+    <Compile Include="Function\List.cs" />
     <Compile Include="Persistence\Harddisk.cs" />
     <Compile Include="InterProcessor\InterProcCommand.cs" />
     <Compile Include="InterProcessor\ProcessorManager.cs" />
     <Compile Include="InterProcessor\RunCommand.cs" />
     <Compile Include="Module\kOSIDModule.cs" />
-    <Compile Include="KS\Helpers.cs" />
+    <Compile Include="Compilation\KS\Helpers.cs" />
     <Compile Include="Core.cs" />
     <Compile Include="Suffixed\GeoCoordinates.cs" />
-    <Compile Include="Interpreter.cs" />
+    <Compile Include="Screen\Interpreter.cs" />
     <Compile Include="Module\kOSProcessor.cs" />
-    <Compile Include="KS\Context.cs" />
-    <Compile Include="KS\KSScript.cs" />
+    <Compile Include="Compilation\KS\Context.cs" />
+    <Compile Include="Compilation\KS\KSScript.cs" />
     <Compile Include="Logger.cs" />
     <Compile Include="Suffixed\Node.cs" />
     <Compile Include="Suffixed\Orbit.cs" />
-    <Compile Include="CodePart.cs" />
+    <Compile Include="Compilation\CodePart.cs" />
     <Compile Include="Persistence\Archive.cs" />
-    <Compile Include="ProgramBuilder.cs" />
-    <Compile Include="ProgramContext.cs" />
-    <Compile Include="ProgramFile.cs" />
-    <Compile Include="ScreenBuffer.cs" />
-    <Compile Include="Script.cs" />
+    <Compile Include="Compilation\ProgramBuilder.cs" />
+    <Compile Include="Execution\ProgramContext.cs" />
+    <Compile Include="Persistence\ProgramFile.cs" />
+    <Compile Include="Screen\ScreenBuffer.cs" />
+    <Compile Include="Compilation\Script.cs" />
     <Compile Include="SharedObjects.cs" />
     <Compile Include="Suffixed\StageValues.cs" />
     <Compile Include="Utilities\SteeringHelper.cs" />
-    <Compile Include="TermWindow.cs" />
-    <Compile Include="TextEditor.cs" />
+    <Compile Include="Screen\TermWindow.cs" />
+    <Compile Include="Screen\TextEditor.cs" />
     <Compile Include="Suffixed\Timespan.cs" />
     <Compile Include="Utilities\Utils.cs" />
     <Compile Include="Suffixed\Vector.cs" />
-    <Compile Include="Calculator.cs" />
-    <Compile Include="KS\Compiler.cs" />
-    <Compile Include="CPU.cs" />
+    <Compile Include="Compilation\Calculator.cs" />
+    <Compile Include="Compilation\KS\Compiler.cs" />
+    <Compile Include="Execution\CPU.cs" />
     <Compile Include="Suffixed\Direction.cs" />
-    <Compile Include="Function.cs" />
-    <Compile Include="Opcode.cs" />
-    <Compile Include="KS\Parser.cs" />
-    <Compile Include="KS\ParseTree.cs" />
+    <Compile Include="Function\FunctionBase.cs" />
+    <Compile Include="Compilation\Opcode.cs" />
+    <Compile Include="Compilation\KS\Parser.cs" />
+    <Compile Include="Compilation\KS\ParseTree.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="KS\Scanner.cs" />
+    <Compile Include="Compilation\KS\Scanner.cs" />
     <Compile Include="Suffixed\SpecialValue.cs" />
-    <Compile Include="Stack.cs" />
-    <Compile Include="Variable.cs" />
+    <Compile Include="Execution\Stack.cs" />
+    <Compile Include="Execution\Variable.cs" />
     <Compile Include="Suffixed\VersionInfo.cs" />
     <Compile Include="Suffixed\VesselSensors.cs" />
     <Compile Include="Suffixed\VesselTarget.cs" />
@@ -115,6 +121,7 @@
     <Compile Include="Persistence\Volume.cs" />
     <Compile Include="Persistence\VolumeManager.cs" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>if $(ConfigurationName) == Release (copy /Y "$(TargetPath)" "$(ProjectDir)..\Test KSP\GameData\kOS\Plugins\$(TargetFileName)")</PostBuildEvent>
